--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,14 +16,14 @@
       <h1 id="main_bar">
       <!-- <a href="{{ "/" | absolute_url }}">{{ site.title }}</a> -->
       <div class="topnav" id="topnav">
-      <img id="whirl_logo" src="/assets/img/whirl_large_cropped-1024x445.png">
+      <img id="ldmirl_logo" src="/assets/img/logo_mil.png">
       <div class="page_buttons">
       <a href="/index.html" class="btn">Home</a>
-      <a href="/pages/research.html" class="btn">Research</a>
-      <a href="/pages/people.html" class="btn">People</a>
-      <a href="/pages/join.html" class="btn">Join</a>
-      <a href="/pages/reading_group.html" class="btn">Reading Group</a>
-      <a href="/pages/contact.html" class="btn">Contact</a>
+      <!-- <a href="/pages/research.html" class="btn">Research</a> -->
+      <!-- <a href="/pages/people.html" class="btn">People</a> -->
+      <!-- <a href="/pages/join.html" class="btn">Join</a> -->
+      <!-- <a href="/pages/reading_group.html" class="btn">Reading Group</a> -->
+      <!-- <a href="/pages/contact.html" class="btn">Contact</a> -->
       </div>
       <a href="javascript:void(0);" class="icon" onclick="expand()">
         <i class="fa fa-bars"></i>
