removed news, reading_group page, and added research tab but removed content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       <img id="ldmirl_logo" src="/assets/img/logo_mil.png">
       <div class="page_buttons">
       <a href="/index.html" class="btn">Home</a>
-      <!-- <a href="/pages/research.html" class="btn">Research</a> -->
+      <a href="/pages/research.html" class="btn">Research</a>
       <a href="/pages/people.html" class="btn">People</a>
       <!-- <a href="/pages/join.html" class="btn">Join</a> -->
       <!-- <a href="/pages/reading_group.html" class="btn">Reading Group</a> -->
