--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,56 +1,15 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<html lang="{{ page.lang | default: site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-{% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-    {% include head-custom.html %}
-  </head>
+<html lang="{{ page.lang | default: site.lang | default: 'en-US' }}">
+  {% include head.html %}
   <body>
-    <div class="container-lg px-3 my-5 markdown-body">
-      {% if site.title and site.title != page.title %}
-      <h1 id="main_bar">
-      <!-- <a href="{{ "/" | absolute_url }}">{{ site.title }}</a> -->
-      <div class="topnav" id="topnav">
-      <img id="ldmirl_logo" src="/assets/img/logo_mil.png">
-      <div class="page_buttons">
-      <a href="/index.html" class="btn">Home</a>
-      <a href="/pages/research.html" class="btn">Research</a>
-      <a href="/pages/people.html" class="btn">People</a>
-      <!-- <a href="/pages/join.html" class="btn">Join</a> -->
-      <!-- <a href="/pages/reading_group.html" class="btn">Reading Group</a> -->
-      <!-- <a href="/pages/contact.html" class="btn">Contact</a> -->
-      </div>
-      <a href="javascript:void(0);" class="icon" onclick="expand()">
-        <i class="fa fa-bars"></i>
-      </a>
-      </div>
-      </h1>
-      {% endif %}
-
-      {{ content }}
-
-      {% if site.github.private != true and site.github.license %}
-      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-        This site is open source. {% github_edit_link "Improve this page" %}.
-      </div>
-      {% endif %}
+    {% include nav.html %}
+    
+    {{ content }}
+    
+    {% if site.github.private != true and site.github.license %}
+    <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
+      This site is open source. {% github_edit_link "Improve this page" %}.
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
-    <script>
-      anchors.add();
-      function expand() {
-        var x = document.getElementById("topnav");
-        if (x.className === "topnav") {
-          x.className += " responsive";
-        } else {
-          x.className = "topnav";
-        }
-      }
-    </script>
+    {% endif %}
   </body>
 </html>
