--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,11 @@
 
 @import "jekyll-theme-primer";
 
-#whirl_logo {
-    width: 25% 
+#ldmirl_logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 #topnav {
