Update: people, research, recent work

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
       <a href="/index.html" class="btn">Home</a>
       <a href="/pages/research.html" class="btn">Research</a>
       <a href="/pages/people.html" class="btn">People</a>
+      <a href="/pages/recent_works.html" class="btn">Recent Works</a>
       <!-- <a href="/pages/join.html" class="btn">Join</a> -->
       <!-- <a href="/pages/reading_group.html" class="btn">Reading Group</a> -->
       <!-- <a href="/pages/contact.html" class="btn">Contact</a> -->
